2010-05-31  Jonathan Marchand  <jonathlela@gmail.com>  (tiny change)

	* cedet/ede/cpp-root.el (ede-set-project-variables): Fix feature name
	(bug#6231).

2010-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el (Man-completion-table): Let the user type "-k " (bug#6319).

2010-05-31  Drew Adams  <drew.adams@oracle.com>

	* files.el (directory-files-no-dot-files-regexp): Doc fix (bug#6298).

2010-05-31  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (momentary-string-display): Just use read-event to read
	the exit event (Bug#6238).

2010-05-29  Chong Yidong  <cyd@stupidchicken.com>

	* ansi-color.el: Delete unused escape sequences (Bug#6085).
	(ansi-color-drop-regexp): New constant.
	(ansi-color-apply, ansi-color-filter-region)
	(ansi-color-apply-on-region): Delete unrecognized control sequences.
	(ansi-color-apply): Build string list before calling concat.

2010-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/verilog-mode.el (verilog-type-font-keywords):
	Use font-lock-constant-face, not obsolete font-lock-reference-face.

2010-05-27  Masatake YAMATO  <yamato@redhat.com>

	* htmlfontify.el (hfy-face-resolve-face): New function.
	(hfy-face-to-style): Use it (Bug#6279).

2010-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* epa.el (epa--select-keys): Don't explicitly delete the window since
	that can fail (e.g. sole window in frame).  Use dedication instead.

2010-05-19  Uday S Reddy  <u.s.reddy@cs.bham.ac.uk>  (tiny change)

	* textmodes/fill.el (fill-region): Don't fill past the end (bug#6201).

2010-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-quoted-char): Resolve modifiers after key
	remapping (bug#6212).

2010-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tmm.el (tmm-prompt): Don't try to precompute bindings.
	(tmm-get-keymap): Compute shortcuts (bug#6171).

2010-05-10  Glenn Morris  <rgm@gnu.org>

	* desktop.el (desktop-save-buffer-p): Don't mistakenly include